2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* testfun/test.m: Support catching warnings and errors by IDs.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumdim.m: Optimize the summation case.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* general/accumdim.m: New function.

2010-03-05  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fzero.m: Avoid division by zero.

2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Fix tests.

2010-03-04  Jaroslav Hajek  <highegg@gmail.com>

	* optimization/fminbnd.m: Fix termination tolerances.

2010-03-02  Jaroslav Hajek  <highegg@gmail.com>

	* polynomial/convn.m: Remove.
	* polynomial/module.mk: Update.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* set/unique.m: If the argument is sparse and we are not
	operating on rows and we don't need indices, convert nonzero
	elements to a full matrix and work on that instead, converting
	back to sparse when done.

2010-02-28  John W. Eaton  <jwe@octave.org>

	* set/unique.m: Return 0x1 arrays for empty arrays with some
	nonzero dimensions.  Return object with the same class as the
	argument.  New tests.

2010-02-27  Liam Groener <liamg@mac.com>

	* /time/datetick.m: Fix 'keepticks' bug, and untabify.

2010-02-25  Jaroslav Hajek  <highegg@gmail.com>

	* strings/str2double.m: Remove.

2010-02-24  John W. Eaton  <jwe@octave.org>

	* plot/private/__contour__.m (get_lvl_eps): New function.
	Handle case of single level value.  Use sqrt (eps) instead of 1e-6.
	(update_text, add_patch_children): Use it.

2010-02-19  Rik <octave@nomad.inbox5.com>

	* optimization/fzero.m: Add test for discontinuity at the end.

2010-02-18  John W. Eaton  <jwe@octave.org>

	* image/imfinfo.m: Don't handle file time stamp here.

2010-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* statistics/base/center.m: Convert integer inputs to doubles.

2010-02-17  Jaroslav Hajek  <highegg@gmail.com>

	* general/interp2: Slightly optimize linear interpolation.
